# j-pet-mlem

./: .dir-locals.el  .gitattributes  .gitignore  .gitmodules  .tm_properties  CMakeLists.txt  Doxyfile  DoxygenLayout.xml  README.md
cmake/: ExtPNG.cmake
config/: big.cfg  full_ring.cfg  silicon.cfg  small.cfg
gate_input/: new_modules.mac  new_modules.nb
input/: Geometry_16_strips_L30.mac  Geometry_192_strips_3_layers.mac  Geometry_24_strips_L30.mac  Geometry_384_strips_L50.mac
lib/json/: json.hpp
math/: 2d_barrel_matrix.m  3d_barrel.nb  Bootstrap.m  Reconstruction.m  bbox_tests.nb  cform.nb  clean_notebooks.m  code.nb  correlations.nb  covariance.nb  cylinder.nb  detector.m  detector.nb  detector_drawings_3d.nb  ellipse.m  ellipse.nb  geometric_errors.nb  kernel.nb  kernel_test.nb  multilayer.nb  planar_code.nb  plane_detector.nb  plane_detector2.nb  polygon_test.nb  praxt.nb  prob_app.nb  psf.m  read_matrix.nb  rec_2D_line.nb  reconstruction.nb  reconstruction2.nb  resolution.nb  rotation_matrix.nb  round_detector_integral.nb  scintillator_emission.nb  secant.nb  secant_distrib.nb  secant_test.nb  shapes.nb  srf2.nb  (+6 more)
math/geometry/: line_circle_itersection.nb
phantoms/: s_circle_scaled  s_jaszczak_deluxe.json  s_jaszczak_deluxe_rotated.json  s_shepp  s_shepp_like_w_shell.json  s_shepp_like_wo_shell.json  s_shepp_scaled
scripts/: clang-legacy  cmake_brew_llvm.sh  cmake_clang.sh  display_sensivity.pl  doc_filter.pl  format  format-filter  mathrun  matrix_compare.py  matrix_reader.py  matrix_to_text.pl  merge.pl  petmatrix.py  prepare_test.sh  sync_code.sh  sync_doc.sh  update_json.sh
src/: Google.xml  mathjax.js  style.css
src/1d/toy/: gauss_cmd.cpp  gauss_kernel.h  gauss_kernel_test.cpp
src/2d/barrel/: boost_geometry_utils.h  circle_detector.h  circle_detector_test.cpp  describe_scanner_cmd.cpp  detector_set.h  detector_set_test.cpp  event.h  event_test.cpp  generic_scanner.h  generic_scanner_detection_test.cpp  generic_scanner_test.cpp  geometry.h  geometry_cmd.cpp  geometry_soa.h  geometry_test.cpp  lm_naive_reconstruction_test.cpp  lm_reconstruction.h  lm_reconstruction_cmd.cpp  lor.h  lor_geometry.h  matrix.h  matrix_cmd.cpp  matrix_pixel_major.h  matrix_pixel_major_test.cpp  monte_carlo.h  monte_carlo_test.cpp  options.cpp  options.h  phantom_cmd.cpp  polygonal_detector.h  reconstruction.h  reconstruction_cmd.cpp  ring_scanner.h  ring_scanner_test.cpp  scanner_builder.h  scanner_builder_test.cpp  sparse_matrix.h  sparse_matrix_test.cpp  square_detector.h  square_detector_test.cpp  (+3 more)
src/2d/barrel/cuda/: lm_reconstruction.cu  lm_reconstruction.h  matrix.cu  matrix.h  phantom.cu  phantom.h  reconstruction.cu  reconstruction.h
src/2d/gate/: gate_macros.h  gate_macros_test.cpp  gate_scanner_builder.h  gate_volume.h  gate_volume_builder.h  gate_volume_test.cpp  world.txt
src/2d/geometry/: circle.h  circle_test.cpp  ellipse.h  ellipse_test.cpp  event.h  event_test.cpp  find_symmetry.h  gate_volume_test.nb  line_drawing.h  line_drawing_test.cpp  line_segment.h  line_segment_test.cpp  phantom.h  pixel.h  pixel_grid.h  pixel_grid_test.cpp  pixel_map.h  point.h  point_test.cpp  polygon.h  polygon_test.cpp  rectangle.h  rectangle_test.cpp  transformation.h  transformation_test.cpp  triangular_pixel_map.h  vector.h  vector_test.cpp
src/2d/strip/: analytic_kernel.h  event.h  gaussian_kernel.h  gaussian_kernel_test.cpp  kernel_monte_carlo.cpp  kernel_monte_carlo.h  kernel_monte_carlo_cmd.cpp  kernel_test.cpp  kernel_testing_toolbox.h  options.cpp  options.h  phantom_cmd.cpp  reconstruction.h  reconstruction_cmd.cpp  reconstruction_stats.h  response.h  response_test.cpp  scanner.h  scanner_test.cpp  simple_kernel.h  strip_kernel_test.cpp
src/2d/strip/cuda/: gpu_events_soa.h  reconstruction.cu  reconstruction.h
src/2d/strip/cuda/reconstruction/: simple.cuh  thread_granularity.cuh  warp_granularity.cuh
src/2d/toy/: gauss_kernel.h  gauss_kernel_test.cpp  gauss_scanner.h  phantom_cmd.cpp  reconstruction.h  reconstruction_test.cpp
src/3d/full/: scanner.h  scanner_test.cpp  volume.h
src/3d/gate_input/: gate_volume.h
src/3d/geometry/: distribution.h  distribution_test.cpp  event.h  event_generator.h  event_generator_test.cpp  event_test.cpp  matrix.h  matrix_test.cpp  phantom.h  phantom_builder.h  phantom_builder_test.cpp  phantom_test.cpp  point.h  point_test.cpp  ray.h  ray_test.cpp  transform.h  transform_test.cpp  vector.h  vector_test.cpp  voxel.h  voxel_grid.h  voxel_grid_test.cpp  voxel_map.h  voxel_set.h  voxel_set_test.cpp
src/3d/hybrid/: matrix_cmd.cpp  monte_carlo.h  options.cpp  options.h  phantom_cmd.cpp  reconstruction.h  reconstruction_cmd.cpp  scanner.h  scanner_test.cpp  sensitivity_cmd.cpp  sensitivity_mapper.h  sensitivity_mapper_test.cpp
src/3d/hybrid/cuda/: matrix.cu  matrix.h  reconstruction.cu  reconstruction.h
src/3d/hybrid/cuda/reconstruction/: thread_granularity.cuh  warp_granularity.cuh  warp_granularity_no_tex.cuh  warp_voxel_granularity.cuh
src/3d/tool/: convert_cmd.cpp  crop_cmd.cpp  options.cpp  options.h  psf.h  psf_cmd.cpp  psf_test.cpp
src/common/: mathematica_graphics.h  mathematica_graphics_test.cpp  model.h  options.cpp  options.h  phantom_monte_carlo.h  phantom_monte_carlo_test.cpp  types.h
src/common/cuda/: kernels.cu  kernels.h
src/util/: array.h  array_test.cpp  backtrace.cpp  backtrace.h  bstream.h  cmdline_hooks.cpp  cmdline_hooks.h  cmdline_test.cpp  cmdline_types.h  delegate.h  gate_parser.h  gate_parser_test.cpp  nrrd_writer.h  null_stream.h  progress.h  random.h  random_test.cpp  read.h  sort.h  sort_test.cpp  string.cpp  string.h  string_test.cpp  svg_ostream.h  test.cpp  test.h  test_test.cpp  text_parser.h  variant.h
src/util/codegen_tests/: array1.cpp  array2.cpp
src/util/cuda/: compat.h  debug.h  memory.h
testbed/: TODO.md  m_big_ref.cfg  run.py  run_with_descriptor.py  s_sphere.json  wscript
